Fixed: Keep filter after collapsing time chart

--- a/src/app/nav/dashboard/time-view/mainvis/mainvis.component.scss
+++ b/src/app/nav/dashboard/time-view/mainvis/mainvis.component.scss
@@ -50,6 +50,7 @@ $color-change-list: #7fc97f #cab2d6 #fb9a99 #9932CC #1f78b4 #e31a1c #bf5b17 #666
   position: absolute;
   top: 60px;
   right: 20px;
+  background: #f9f9f9;
 }
 
 .legendElement {
